src/main/java/org/as3commons/asblocks/parser/antlr/asdoc/ASDocParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g 2011-08-06 09:36:49

package org.as3commons.asblocks.parser.antlr.asdoc;

import org.as3commons.asblocks.parser.antlr.LinkedListToken;
import org.as3commons.asblocks.parser.antlr.LinkedListTree;
import org.antlr.runtime.MismatchedTokenException;
import org.as3commons.asblocks.impl.TokenBuilder;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class ASDocParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASDOC", "INLINE_TAG", "DESCRIPTION", "PARA_TAG", "TEXT_LINE", "VIRTUAL_WS", "NL", "WORD", "STARS", "WS", "LBRACE", "RBRACE", "AT", "ATWORD", "WORD_TAIL"
    };
    public static final int EOF=-1;
    public static final int ASDOC=4;
    public static final int INLINE_TAG=5;
    public static final int DESCRIPTION=6;
    public static final int PARA_TAG=7;
    public static final int TEXT_LINE=8;
    public static final int VIRTUAL_WS=9;
    public static final int NL=10;
    public static final int WORD=11;
    public static final int STARS=12;
    public static final int WS=13;
    public static final int LBRACE=14;
    public static final int RBRACE=15;
    public static final int AT=16;
    public static final int ATWORD=17;
    public static final int WORD_TAIL=18;

    // delegates
    // delegators


        public ASDocParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ASDocParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ASDocParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g"; }


    	//protected void mismatch(IntStream input, int ttype, BitSet follow)
    	//	throws RecognitionException
    	//{
    	//	throw new MismatchedTokenException(ttype, input);
    	//}

    	private void placeholder(LinkedListTree imaginary) {
    		
    		if (imaginary.getChildCount() > 0)
    			return;

    		LinkedListToken tok = (LinkedListToken) input.LT(1);
    		LinkedListToken placeholder = TokenBuilder.newPlaceholder(imaginary);
    		tok.prependToken(placeholder);
    	}



    public static class commentBody_return extends ParserRuleReturnScope {
        LinkedListTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "commentBody"
    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:81:1: commentBody : d= description ( paragraphTag )* EOF -> ^( ASDOC description ( paragraphTag )* ) ;
    public final ASDocParser.commentBody_return commentBody() throws RecognitionException {
        ASDocParser.commentBody_return retval = new ASDocParser.commentBody_return();
        retval.start = input.LT(1);

        LinkedListTree root_0 = null;

        Token EOF2=null;
        ASDocParser.description_return d = null;

        ASDocParser.paragraphTag_return paragraphTag1 = null;


        LinkedListTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_paragraphTag=new RewriteRuleSubtreeStream(adaptor,"rule paragraphTag");
        RewriteRuleSubtreeStream stream_description=new RewriteRuleSubtreeStream(adaptor,"rule description");
        try {
            // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:82:2: (d= description ( paragraphTag )* EOF -> ^( ASDOC description ( paragraphTag )* ) )
            // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:82:4: d= description ( paragraphTag )* EOF
            {
            pushFollow(FOLLOW_description_in_commentBody119);
            d=description();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_description.add(d.getTree());
            if ( state.backtracking==0 ) {
              placeholder((d!=null?((LinkedListTree)d.tree):null));
            }
            // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:83:3: ( paragraphTag )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ATWORD) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:83:3: paragraphTag
            	    {
            	    pushFollow(FOLLOW_paragraphTag_in_commentBody125);
            	    paragraphTag1=paragraphTag();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_paragraphTag.add(paragraphTag1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_commentBody130); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF2);



            // AST REWRITE
            // elements: description, paragraphTag
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LinkedListTree)adaptor.nil();
            // 85:3: -> ^( ASDOC description ( paragraphTag )* )
            {
                // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:85:6: ^( ASDOC description ( paragraphTag )* )
                {
                LinkedListTree root_1 = (LinkedListTree)adaptor.nil();
                root_1 = (LinkedListTree)adaptor.becomeRoot((LinkedListTree)adaptor.create(ASDOC, "ASDOC"), root_1);

                adaptor.addChild(root_1, stream_description.nextTree());
                // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:85:26: ( paragraphTag )*
                while ( stream_paragraphTag.hasNext() ) {
                    adaptor.addChild(root_1, stream_paragraphTag.nextTree());

                }
                stream_paragraphTag.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (LinkedListTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "commentBody"

    public static class description_return extends ParserRuleReturnScope {
        LinkedListTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "description"
    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:89:1: description : ( textLine )* -> ^( DESCRIPTION ( textLine )* ) ;
    public final ASDocParser.description_return description() throws RecognitionException {
        ASDocParser.description_return retval = new ASDocParser.description_return();
        retval.start = input.LT(1);

        LinkedListTree root_0 = null;

        ASDocParser.textLine_return textLine3 = null;


        RewriteRuleSubtreeStream stream_textLine=new RewriteRuleSubtreeStream(adaptor,"rule textLine");
        try {
            // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:90:2: ( ( textLine )* -> ^( DESCRIPTION ( textLine )* ) )
            // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:90:4: ( textLine )*
            {
            // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:90:4: ( textLine )*
            loop2:
            do {
                int alt2=2;
                alt2 = dfa2.predict(input);
                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:90:4: textLine
            	    {
            	    pushFollow(FOLLOW_textLine_in_description155);
            	    textLine3=textLine();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_textLine.add(textLine3.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);



            // AST REWRITE
            // elements: textLine
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LinkedListTree)adaptor.nil();
            // 91:3: -> ^( DESCRIPTION ( textLine )* )
            {
                // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:91:6: ^( DESCRIPTION ( textLine )* )
                {
                LinkedListTree root_1 = (LinkedListTree)adaptor.nil();
                root_1 = (LinkedListTree)adaptor.becomeRoot((LinkedListTree)adaptor.create(DESCRIPTION, "DESCRIPTION"), root_1);

                // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:91:20: ( textLine )*
                while ( stream_textLine.hasNext() ) {
                    adaptor.addChild(root_1, stream_textLine.nextTree());

                }
                stream_textLine.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (LinkedListTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "description"

    public static class textLine_return extends ParserRuleReturnScope {
        LinkedListTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "textLine"
    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:94:1: textLine : ( textLineStart ( textLineContent )* ( NL | EOF ) | NL );
    public final ASDocParser.textLine_return textLine() throws RecognitionException {
        ASDocParser.textLine_return retval = new ASDocParser.textLine_return();
        retval.start = input.LT(1);

        LinkedListTree root_0 = null;

        Token NL6=null;
        Token EOF7=null;
        Token NL8=null;
        ASDocParser.textLineStart_return textLineStart4 = null;

        ASDocParser.textLineContent_return textLineContent5 = null;


        LinkedListTree NL6_tree=null;
        LinkedListTree EOF7_tree=null;
        LinkedListTree NL8_tree=null;

        try {
            // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:95:2: ( textLineStart ( textLineContent )* ( NL | EOF ) | NL )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=WORD && LA5_0<=AT)) ) {
                alt5=1;
            }
            else if ( (LA5_0==NL) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:95:4: textLineStart ( textLineContent )* ( NL | EOF )
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    pushFollow(FOLLOW_textLineStart_in_textLine178);
                    textLineStart4=textLineStart();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, textLineStart4.getTree());
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:95:18: ( textLineContent )*
                    loop3:
                    do {
                        int alt3=2;
                        alt3 = dfa3.predict(input);
                        switch (alt3) {
                    	case 1 :
                    	    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:95:18: textLineContent
                    	    {
                    	    pushFollow(FOLLOW_textLineContent_in_textLine180);
                    	    textLineContent5=textLineContent();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, textLineContent5.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);

                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:95:35: ( NL | EOF )
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==NL) ) {
                        alt4=1;
                    }
                    else if ( (LA4_0==EOF) ) {
                        alt4=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 0, input);

                        throw nvae;
                    }
                    switch (alt4) {
                        case 1 :
                            // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:95:36: NL
                            {
                            NL6=(Token)match(input,NL,FOLLOW_NL_in_textLine184); if (state.failed) return retval;
                            if ( state.backtracking==0 ) {
                            NL6_tree = (LinkedListTree)adaptor.create(NL6);
                            adaptor.addChild(root_0, NL6_tree);
                            }

                            }
                            break;
                        case 2 :
                            // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:95:41: EOF
                            {
                            EOF7=(Token)match(input,EOF,FOLLOW_EOF_in_textLine188); if (state.failed) return retval;

                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:96:4: NL
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    NL8=(Token)match(input,NL,FOLLOW_NL_in_textLine195); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NL8_tree = (LinkedListTree)adaptor.create(NL8);
                    adaptor.addChild(root_0, NL8_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (LinkedListTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "textLine"

    public static class textLineStart_return extends ParserRuleReturnScope {
        LinkedListTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "textLineStart"
    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:99:1: textLineStart : ( ( LBRACE ATWORD )=> inlineTag | WORD | STARS | WS | LBRACE | RBRACE | AT );
    public final ASDocParser.textLineStart_return textLineStart() throws RecognitionException {
        ASDocParser.textLineStart_return retval = new ASDocParser.textLineStart_return();
        retval.start = input.LT(1);

        LinkedListTree root_0 = null;

        Token WORD10=null;
        Token STARS11=null;
        Token WS12=null;
        Token LBRACE13=null;
        Token RBRACE14=null;
        Token AT15=null;
        ASDocParser.inlineTag_return inlineTag9 = null;


        LinkedListTree WORD10_tree=null;
        LinkedListTree STARS11_tree=null;
        LinkedListTree WS12_tree=null;
        LinkedListTree LBRACE13_tree=null;
        LinkedListTree RBRACE14_tree=null;
        LinkedListTree AT15_tree=null;

        try {
            // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:100:2: ( ( LBRACE ATWORD )=> inlineTag | WORD | STARS | WS | LBRACE | RBRACE | AT )
            int alt6=7;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:100:4: ( LBRACE ATWORD )=> inlineTag
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    pushFollow(FOLLOW_inlineTag_in_textLineStart213);
                    inlineTag9=inlineTag();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, inlineTag9.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:101:4: WORD
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    WORD10=(Token)match(input,WORD,FOLLOW_WORD_in_textLineStart218); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    WORD10_tree = (LinkedListTree)adaptor.create(WORD10);
                    adaptor.addChild(root_0, WORD10_tree);
                    }

                    }
                    break;
                case 3 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:101:11: STARS
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    STARS11=(Token)match(input,STARS,FOLLOW_STARS_in_textLineStart222); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    STARS11_tree = (LinkedListTree)adaptor.create(STARS11);
                    adaptor.addChild(root_0, STARS11_tree);
                    }

                    }
                    break;
                case 4 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:101:19: WS
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    WS12=(Token)match(input,WS,FOLLOW_WS_in_textLineStart226); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    WS12_tree = (LinkedListTree)adaptor.create(WS12);
                    adaptor.addChild(root_0, WS12_tree);
                    }

                    }
                    break;
                case 5 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:101:24: LBRACE
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    LBRACE13=(Token)match(input,LBRACE,FOLLOW_LBRACE_in_textLineStart230); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LBRACE13_tree = (LinkedListTree)adaptor.create(LBRACE13);
                    adaptor.addChild(root_0, LBRACE13_tree);
                    }

                    }
                    break;
                case 6 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:101:33: RBRACE
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    RBRACE14=(Token)match(input,RBRACE,FOLLOW_RBRACE_in_textLineStart234); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    RBRACE14_tree = (LinkedListTree)adaptor.create(RBRACE14);
                    adaptor.addChild(root_0, RBRACE14_tree);
                    }

                    }
                    break;
                case 7 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:101:42: AT
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    AT15=(Token)match(input,AT,FOLLOW_AT_in_textLineStart238); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    AT15_tree = (LinkedListTree)adaptor.create(AT15);
                    adaptor.addChild(root_0, AT15_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (LinkedListTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
             finally {
        }
        return retval;
    }
    // $ANTLR end "textLineStart"

    public static class textLineContent_return extends ParserRuleReturnScope {
        LinkedListTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "textLineContent"
    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:104:1: textLineContent : ( ( LBRACE ATWORD )=> inlineTag | WORD | STARS | WS | LBRACE | RBRACE | AT | ATWORD );
    public final ASDocParser.textLineContent_return textLineContent() throws RecognitionException {
        ASDocParser.textLineContent_return retval = new ASDocParser.textLineContent_return();
        retval.start = input.LT(1);

        LinkedListTree root_0 = null;

        Token WORD17=null;
        Token STARS18=null;
        Token WS19=null;
        Token LBRACE20=null;
        Token RBRACE21=null;
        Token AT22=null;
        Token ATWORD23=null;
        ASDocParser.inlineTag_return inlineTag16 = null;


        LinkedListTree WORD17_tree=null;
        LinkedListTree STARS18_tree=null;
        LinkedListTree WS19_tree=null;
        LinkedListTree LBRACE20_tree=null;
        LinkedListTree RBRACE21_tree=null;
        LinkedListTree AT22_tree=null;
        LinkedListTree ATWORD23_tree=null;

        try {
            // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:105:2: ( ( LBRACE ATWORD )=> inlineTag | WORD | STARS | WS | LBRACE | RBRACE | AT | ATWORD )
            int alt7=8;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:105:4: ( LBRACE ATWORD )=> inlineTag
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    pushFollow(FOLLOW_inlineTag_in_textLineContent256);
                    inlineTag16=inlineTag();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, inlineTag16.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:106:4: WORD
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    WORD17=(Token)match(input,WORD,FOLLOW_WORD_in_textLineContent261); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    WORD17_tree = (LinkedListTree)adaptor.create(WORD17);
                    adaptor.addChild(root_0, WORD17_tree);
                    }

                    }
                    break;
                case 3 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:106:11: STARS
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    STARS18=(Token)match(input,STARS,FOLLOW_STARS_in_textLineContent265); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    STARS18_tree = (LinkedListTree)adaptor.create(STARS18);
                    adaptor.addChild(root_0, STARS18_tree);
                    }

                    }
                    break;
                case 4 :
                    // C:\\Users\\Teoti\\Documents\\Flash\\ws-as-blocks\\as3commons-jasblocks\\src\\main\\java\\org\\as3commons\\asblocks\\parser\\antlr\\asdoc\\ASDoc.g:106:19: WS
                    {
                    root_0 = (LinkedListTree)adaptor.nil();

                    WS19=(Token)match(input,WS,FOLLOW_WS_in_textLineContent269); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    WS19_tree = (LinkedListTree)adaptor.create(WS19);
                    adaptor.addChild(root_0, WS19_tree);
                    }
